fix css bugs in experiment selecetor and guide: hide horizontal scrollbar

--- a/app/css/popup/_guide.scss
+++ b/app/css/popup/_guide.scss
@@ -69,6 +69,7 @@
     .inner {
       height: 310px;
       overflow-y: scroll;
+      overflow-x: hidden;
       padding: 0 10px;
 
       header {
