--- a/app/css/view/_loading.scss
+++ b/app/css/view/_loading.scss
@@ -78,7 +78,8 @@
     }
 
     #experiments {
-        overflow: scroll;
+        overflow-y: scroll;
+        overflow-x: hidden;
         height: 50%;
         width: 33em;
         margin: 0 auto;
